--- a/mysnowball/build.gradle
+++ b/mysnowball/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     /* Lombok */
     compileOnly 'org.projectlombok:lombok:1.18.24'
 
+    /* MapStruct */
+    implementation 'org.mapstruct:mapstruct:1.5.1.Final'
+    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
     /* Querydsl */
     implementation "com.querydsl:querydsl-jpa:5.0.0"
     implementation "com.querydsl:querydsl-apt:5.0.0"
@@ -33,6 +37,8 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson'
 
     /* Annotation processors */
+    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jpa'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
@@ -43,6 +49,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-hibernate5
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5', version: '2.11.3'
