--- a/mysnowball/src/main/resources/application.yml
+++ b/mysnowball/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     database: POSTGRESQL
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
