--- a/mysnowball/src/main/resources/application.yml
+++ b/mysnowball/src/main/resources/application.yml
@@ -1,7 +1,5 @@
-#jwt:
-#  secret: [??]
-
-#Datasource Configuration
+server:
+  port: 8080
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
