feat: 문자메시지 전송

--- a/mysnowball/build.gradle
+++ b/mysnowball/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 
     implementation 'com.vladmihalcea:hibernate-types-52:2.16.3'
 
+    implementation 'net.nurigo:sdk:4.2.8'
+
 }
 
 tasks.named("test") {
